# graph-properties

./: CMakeLists.txt  main.cpp
DateConverter_lib/: Gregorian.cpp  Julian.cpp
Google_tests/: AbsoluteDateTest.cpp  CMakeLists.txt  ConverterTests.cpp  DataReaderTest.cpp  GraphPropertiesTest.cpp
GraphProperties/: CMakeLists.txt  SampleData.txt  main.cpp
GraphProperties_lib/: CMakeLists.txt  DataReader.cpp  DataReader.h
